--- a/Denk/app/src/main/res/values/strings.xml
+++ b/Denk/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="enter_bottom_text">Enter Bottom Text</string>
     <string name="bottom_text">Bottom Text</string>
     <string name="top_text">Top Text</string>
+    <string name="memefy">Memefy</string>
 </resources>
